@@ -1,30 +1,25 @@
 package org.perpectiveteam.plugins.aisummarize;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
+import org.perpectiveteam.plugins.aisummarize.ai.AIPromptBuilder;
+import org.perpectiveteam.plugins.aisummarize.config.AISummarizeConfigProperties;
 import org.perpectiveteam.plugins.aisummarize.config.AiSummarizeConfig;
-import org.perpectiveteam.plugins.aisummarize.hooks.PostJobInScanner;
+import org.perpectiveteam.plugins.aisummarize.config.AiSummarizeProperySensor;
+import org.perpectiveteam.plugins.aisummarize.hooks.PostProjectAnalysisSummarize;
 import org.perpectiveteam.plugins.aisummarize.pullrequest.PostAnalysisIssueVisitor;
 import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.bitbucket.cloud.BitbucketCloudClientFactory;
-import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.bitbucket.cloud.BitbucketConfiguration;
-import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.bitbucket.cloud.HttpClientBuilderFactory;
+import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.bitbucket.BitbucketConfiguration;
+import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.bitbucket.HttpClientBuilderFactory;
 import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.github.GitHubClientFactory;
 import org.perpectiveteam.plugins.aisummarize.summarize.SummarizeExecutorFactory;
 import org.perpectiveteam.plugins.aisummarize.pullrequest.almclient.ALMClientFactory;
 import org.sonar.api.Plugin;
-import org.sonar.api.PropertyType;
 import org.sonar.api.SonarQubeSide;
-import org.sonar.api.config.PropertyDefinition;
-import org.sonar.api.resources.Qualifiers;
 import org.sonar.core.extension.CoreExtension;
 
 public class AiSummarizePlugin implements Plugin, CoreExtension {
-
-    private static final String CATEGORY = "AI Summarize";
-    private static final String SUBCATEGORY_GITHUB = "GitHub";
-    private static final String SUBCATEGORY_AI = "AI Providers";
-
     @Override
     public String getName() {
         return "AI Summarize Plugin";
@@ -35,7 +30,6 @@ public class AiSummarizePlugin implements Plugin, CoreExtension {
         if (SonarQubeSide.COMPUTE_ENGINE == context.getRuntime().getSonarQubeSide()) {
             context.addExtensions(PostAnalysisIssueVisitor.class);
         }
-        // Not used currently
     }
 
     @Override
@@ -45,47 +39,20 @@ public class AiSummarizePlugin implements Plugin, CoreExtension {
 
     //TODO: split extensions by scope ( ce, server, scanner )
     private List<Object> getExtensions() {
-        return Arrays.asList(
+        List<Object> extensions = new ArrayList<>(List.of(
                 AiSummarizeConfig.class,
                 ALMClientFactory.class,
-                PostJobInScanner.class,
+                PostProjectAnalysisSummarize.class,
                 GitHubClientFactory.class,
                 BitbucketConfiguration.class,
                 HttpClientBuilderFactory.class,
                 BitbucketCloudClientFactory.class,
                 SummarizeExecutorFactory.class,
-
-                PropertyDefinition.builder(AiSummarizeConfig.FILE_LIMIT)
-                        .name("File Limit")
-                        .description("Maximum number of files to process in a pull request")
-                        .category(CATEGORY)
-                        .subCategory(SUBCATEGORY_GITHUB)
-                        .type(PropertyType.INTEGER)
-                        .defaultValue("10")
-                        .onQualifiers(Qualifiers.PROJECT)
-                        .index(3)
-                        .build(),
-
-                // AI Provider settings
-                PropertyDefinition.builder(AiSummarizeConfig.AI_PROVIDER)
-                        .name("AI Provider")
-                        .description("AI provider to use for summarization (currently only 'openai' is supported)")
-                        .category(CATEGORY)
-                        .subCategory(SUBCATEGORY_AI)
-                        .defaultValue("openai")
-                        .onQualifiers(Qualifiers.PROJECT)
-                        .index(1)
-                        .build(),
-
-                PropertyDefinition.builder(AiSummarizeConfig.OPENAI_API_KEY)
-                        .name("OpenAI API Key")
-                        .description("API key for OpenAI")
-                        .category(CATEGORY)
-                        .subCategory(SUBCATEGORY_AI)
-                        .type(PropertyType.PASSWORD)
-                        .onQualifiers(Qualifiers.PROJECT)
-                        .index(2)
-                        .build()
-        );
+                AIPromptBuilder.class,
+                AiSummarizeProperySensor.class,
+                AISummarizeConfigProperties.all()
+        ));
+        extensions.addAll(AISummarizeConfigProperties.all());
+        return extensions;
     }
 }
